  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.


2.8.2
-----

All:

- Added wxSizerFlags::Shaped() and FixedMinSize() methods
- Added wxCSConv::IsOk() (Manuel Martin)
- Added wxDateTime::GetDateOnly()
- Made wxTextFile work with unseekable files again (David Hart)
- Added wxCONFIG_USE_SUBDIR flag to wxFileConfig (Giuseppe Bilotta)
- Added wxSearchCtrl::[Get|Set]DescriptiveText

wxMSW

- Fix lack of spin control update event when control lost focus
- Corrected drawing of bitmaps for disabled menu items

wxMac

- Added support for the wxFRAME_FLOAT_ON_PARENT style

wxX11:

- Don't crash in wxWindow dtor if the window hadn't been really Create()d


2.8.1
-----

All:

- Fix compilation with wxUSE_STL=1
- wxGrid::GetBestSize() returns same size the grid would have after AutoSize()
- Added wxTreeCtrl::CollapseAll[Children]() and IsEmpty() (Francesco Montorsi)
- Several RTL-related positioning fixes (Diaa Sami)
- Fix wxConfig::DeleteGroup() for arguments with trailing slash (David Hart)
- Fix memory leak in wxGrid::ShowCellEditControl() (Christian Sturmlechner)

wxMSW:

- Fixed compilation with Borland C++ in Unicode mode but without MSLU
- Show taskbar icon menu on right button release, not press

wxGTK:

- Don't crash if command line is not valid UTF-8 (Unicode build only)

wxUniv:

- It is now possible to set background colour of wxStaticText


2.8.0
-----

All:

- Added wxSearchCtrl (Vince Harron)
- wxCSConv("UTF-16/32") now behaves correctly, i.e. same as wxMBConvUTF16/32
- wxArrayString::Alloc() now works as reserve() and doesn't clear array contents
- Fixed long standing bug in wxFileConfig groups renaming (Antti Koivisto).
- New option wxFS_READ | wxFS_SEEKABLE for wxFileSystem::OpenFile() to return
  a stream that is seekable.
- Fixed bug in wxCalendarCtrl::HitTest() when clicking on month change arrows
- Added wxWindow::GetWindowBorderSize() and corrected wxTreeCtrl::GetBestSize()
  for a control with borders (Tim Kosse)

wxMSW:
