@@ -57,7 +57,13 @@ class WXDLLEXPORT wxToolBar: public wxToolBarBase
 
     virtual void SetRows(int nRows);
 
-  // Add all the buttons
+#if wxABI_VERSION >= 20802
+    // TODO: In 2.9 these should probably be virtual, and declared in the base class...
+    void SetToolNormalBitmap(int id, const wxBitmap& bitmap);
+    void SetToolDisabledBitmap(int id, const wxBitmap& bitmap);
+#endif
+
+    // Add all the buttons
 
     virtual wxString MacGetToolTipString( wxPoint &where ) ;
     void OnPaint(wxPaintEvent& event) ;
